fix(header): show like and avatar icons on mobile screens

--- a/src/shared/layouts/MainLayouts/Header/Header.module.scss
+++ b/src/shared/layouts/MainLayouts/Header/Header.module.scss
@@ -80,8 +80,6 @@ $font-size-s: 12px;
 
 @include media-max-mobile-s {
   .row {
-    .like,
-    .avatar,
     .search {
       display: none;
     }
